fix telephone component styling on ie11

--- a/src/components/Form/Telephone/Telephone.scss
+++ b/src/components/Form/Telephone/Telephone.scss
@@ -1,17 +1,19 @@
 .telephone {
   display: inline-block;
 
+  .telephone-number-fields {
+    display: table-row;
+  }
+
   .numbers {
     > label {
       font-weight: bold;
     }
   }
 
-  .collapse-margin {
-    margin-bottom: -2.6rem;
-  }
-
   .number {
+    position: relative;
+
     &.three {
       width: 8rem;
     }
@@ -29,6 +31,8 @@
     }
 
     label {
+      position: absolute;
+      top: -27px;
       min-height: 2.7rem;
     }
   }
@@ -44,12 +48,13 @@
   }
 
   .separator.pound {
-    margin-left: 1rem;
+    padding-left: 1rem;
   }
 
   .number,
   .separator {
-    display: inline-block;
+    display: table-cell;
+    vertical-align: middle;
     padding-right: 0.3rem;
   }
 
